--- a/lecture12.Rmd
+++ b/lecture12.Rmd
@@ -42,7 +42,6 @@ Can be used in a **mini-batch** version.
 
 ---
 
-
 ## Minimizing Sums
 
 Many of the functions we are trying to minimize are of the form
@@ -259,6 +258,7 @@ Fixing the exponent $a$ and picking a target rate, $\gamma_1$, to be reached
 after $k_1$ steps, we can solve for $K$ and get
 $$K = \frac{k_1^a \gamma_1}{\gamma_0 - \gamma_1}.$$
 
+
 ---
 
 class: middle
@@ -315,10 +315,34 @@ p1 + p2 + plot_layout(axes = "collect_y")
 
 ---
 
-## Least Squares Loss
+
+### So, Is The Problem of Setting Learning Rate Solved?
+
+No, unfortunately not
+
+--
+
+.pull-left[
+
+```{r stepsize-short, echo = FALSE, fig.cap ="Too fast decay (a = 1)"}
+knitr::include_graphics("images/lecture12-lrdecay-fast.png")
+```
+]
+
+--
+
+.pull-right[
+```{r stepsize-long, echo = FALSE, fig.cap = "Too slow decay (a = 0.5)"}
+knitr::include_graphics("images/lecture12-lrdecay-slow.png")
+```
+]
+
+---
+
+## Example: Least Squares Loss
 
 Consider an objective of the type
-$$f(\beta) = \frac{1}{2N} \sum_{i=1}^N  (y_i - \mu(x_i, \beta))^2.$$
+$$f(\beta) = \frac{1}{2n} \sum_{i=1}^n  (y_i - \mu(x_i, \beta))^2.$$
 
 --
 
@@ -337,17 +361,17 @@ $$\nabla f_i(\beta) = - x_i (y_i - x_i^T \beta).$$
 ### A Poisson Regression Model
 
 $$Y_i \mid Z_i = z_i \sim \mathrm{Poisson(e^{\beta_0 + \beta_1 z_i})}$$
-for $\beta = (\beta_0, \beta_1)^T$ the parameter vector and
-the $Z_i$s uniformly distributed in $(-1, 1)$,
+for $\beta = (\beta_0, \beta_1)^T$ and
+$Z_i$ uniformly distributed in $(-1, 1)$.
 
 --
 
 The conditional mean of $Y_i$ given $Z_i = z_i$ is thus
-$$\mu(z_i, \beta) = e^{\beta_0 + \beta_1 z_i}$$
+$$\mu(z_i, \beta) = e^{\beta_0 + \beta_1 z_i}.$$
 
 ---
 
-### Least Squares
+### Least Squares for the Poisson Model
 
 ```{r online-poisson-SG-SE0, echo=-1, cache = TRUE}
 set.seed(13102020)
@@ -437,18 +461,28 @@ ggplot(beta_all, aes(iteration, value, color = Parameter)) +
 
 ## Exercise
 
-- Implement a stochastic gradient descent algorithm to fit standard least-squares
+- Implement an SGD algorithm to fit standard least-squares
   regression, i.e. minimize $$\frac{1}{2n} \lVert y - X\beta\rVert_2^2.$$
 --
 
 - Run the algorithm on a simple linear regression problem in two dimensions.
 --
 
-- Use the **mvtnorm** package to generate $X$ from a multivariate Gaussian distribution,
-  specifying some correlation between the variables.
+- **mvtnorm::rmvnorm()** to generate $X$ from a multivariate Gaussian distribution,
+  specifying some non-diagonal covariance structure.
 --
 
-- Try to visualize both the convergence of the algorithm and the path it takes in the parameter space.
+- Try to visualize both the convergence of the algorithm and the path it takes in the parameter space. For the latter, try something
+  like the following:
+
+```{r exercise-hint, eval = FALSE}
+beta1 <- seq(-1, 3, length = 100)
+beta2 <- seq(-1, 3, length = 100)
+loss_2d_vectorized <- Vectorize(function(b1, b2) loss_2d(b1, b2, X, y))
+z <- outer(beta1, beta2, loss_2d_vectorized)
+
+contour(beta1, beta2, z)
+```
 
 ---
 
@@ -498,9 +532,9 @@ rate <- decay_scheduler(gamma0 = 0.02, gamma1 = 0.001, n1 = 1000)
 sgd(c(0, 0), grad_pois, n, rate, 1000, cb = pois_SG_tracer$tracer)
 ```
 
----
+--
 
-Test by comparing to standard batch solution:
+### Test
 
 ```{r pois-beta-hat, dependson="pois-gradient", echo=1}
 beta_hat <- coefficients(glm(y ~ z, family = poisson))
@@ -522,7 +556,8 @@ sgd(c(0, 0), grad_pois, n = n, gamma = rate, cb = pois_SG_tracer_2$tracer)
 ```
 
 --
-Test by comparing to standard batch solution:
+
+### Test
 
 ```{r pois-beta-hat-2, dependson="batch-poisson-SG-2", echo=1}
 beta_hat_2 <- coefficients(glm(y ~ z, family = poisson))
@@ -536,18 +571,18 @@ class: middle
 hline_data <- data.frame(
   beta0 = c(beta_hat[1], beta_hat_2[1]),
   beta1 = c(beta_hat[2], beta_hat_2[2]),
-  N = c("N = 50", "N = 500")
+  n = c("n = 50", "n = 500")
 )
 
 dplyr::bind_rows(
   small = summary(pois_SG_tracer)[seq(10, 1000, 10), ],
   large = summary(pois_SG_tracer_2),
-  .id = "N"
+  .id = "n"
 ) %>%
-  dplyr::mutate(N = ifelse(n == "small", "N = 50", "N = 500"), n = rep(5 * seq(10, 1000, 10), 2)) %>%
+  dplyr::mutate(n = ifelse(n == "small", "n = 50", "n = 500"), it = rep(5 * seq(10, 1000, 10), 2)) %>%
   dplyr::rename(beta0 = par.1, beta1 = par.2) %>%
   tidyr::pivot_longer(cols = c("beta0", "beta1"), names_to = "Parameter") %>%
-  ggplot(aes(n, value, color = Parameter)) +
+  ggplot(aes(it, value, color = Parameter)) +
   geom_hline(data = hline_data, aes(yintercept = beta0), color = "blue") +
   geom_hline(data = hline_data, aes(yintercept = beta1), color = "red") +
   geom_hline(yintercept = beta_true[1], linetype = 2, alpha = 0.5) +
@@ -555,7 +590,7 @@ dplyr::bind_rows(
   geom_point(alpha = 0.5, shape = 16, size = 2) +
   ylim(c(1.5, 3.5)) +
   ylab("Parameter value") +
-  facet_wrap("N") +
+  facet_wrap("n") +
   scale_color_manual(values = c("blue", "red"))
 ```
 
@@ -823,5 +858,5 @@ ensured if $a \in (0.5, 1]$.
 - How to improve SGD using momentum and adaptive learning rates
 --
 
-- Use Rcpp to speed up the optimization process
+- Use Rcpp to improve performance of our SGD algorithms
 
