--- a/lecture12/tex/macros.tex
+++ b/lecture12/tex/macros.tex
@@ -1,5 +1,6 @@
 % operators
 \DeclareMathOperator*{\argmax}{arg\,max}
+\DeclareMathOperator{\diag}{diag}
 
 % macros
 \newcommand{\pkg}[1]{\textsf{#1}}
